apps/istio/overlays/service/gateway-listeners.patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  listeners:
    - name: http
      protocol: HTTP
      hostname: "*.svc.home.arpa"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-argocd
      protocol: HTTPS
      port: 443
      hostname: "argocd.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: argocd-tls
    - name: https-it-tools
      protocol: HTTPS
      port: 443
      hostname: "it-tools.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: it-tools
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: it-tools-tls
    - name: https-mattermost
      protocol: HTTPS
      port: 443
      hostname: "mattermost.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: mattermost
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: mattermost-tls
    - name: https-ceph
      protocol: HTTPS
      port: 443
      hostname: "ceph.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: rook-ceph
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ceph-tls
    - name: https-sonarqube
      protocol: HTTPS
      port: 443
      hostname: "sonarqube.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: sonarqube
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: sonarqube-tls
    - name: https-vault
      protocol: HTTPS
      port: 443
      hostname: "vault.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: vault
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vault-tls
    - name: https-openbao
      protocol: HTTPS
      port: 443
      hostname: "openbao.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: openbao
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: openbao-tls
    - name: https-keycloak
      protocol: HTTPS
      port: 443
      hostname: "sso.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: keycloak
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: keycloak-tls
    - name: https-grafana
      protocol: HTTPS
      port: 443
      hostname: "grafana.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: grafana-tls
    - name: https-kiali
      protocol: HTTPS
      port: 443
      hostname: "kiali.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: kiali-tls
    - name: https-jaeger
      protocol: HTTPS
      port: 443
      hostname: "jaeger.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: jaeger-tls
    - name: https-jaeger-collector
      protocol: HTTPS
      port: 443
      hostname: "jaeger-collector.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: jaeger-tls
    - name: https-loki
      protocol: HTTPS
      port: 443
      hostname: "loki.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: loki-tls
    - name: https-prometheus
      protocol: HTTPS
      port: 443
      hostname: "prometheus.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: prometheus-tls
    - name: https-alertmanager
      protocol: HTTPS
      port: 443
      hostname: "alerts.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: prometheus-tls
    - name: https-gitlab
      protocol: HTTPS
      port: 443
      hostname: "gitlab.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gitlab-tls
    - name: https-gitlab-registry
      protocol: HTTPS
      port: 443
      hostname: "registry.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gitlab-tls
    - name: https-gitlab-kas
      protocol: HTTPS
      port: 443
      hostname: "kas.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gitlab-tls
    - name: https-gitlab-pages
      protocol: HTTPS
      port: 443
      hostname: "*.pages.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gitlab-tls
    - name: tcp-gitlab-ssh
      protocol: TCP
      port: 2222
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
    - name: https-argo-workflows
      protocol: HTTPS
      port: 443
      hostname: "workflows.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: argo-workflows
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: argo-workflows-tls
